--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "express": "~3.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ccarpita/wedding"
   }
 }
