build: Dockerize the whole static site
- Use alpine as a base image (super light!)
- Remove node update scripts, since we will use Docker Cloud
- Remove git submodule and snapshot vendor code to simplify build
- All build logic is in Dockerfile + compose

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ src/public/assets/img/prev.png
 src/public/assets/img/loading.gif
 src/public/assets/js/jquery*.js
 src/public/assets/js/lightbox*.js
+src/public/assets/js/modernizr*.js
